--- a/assets/front/scss/components/_plugins.scss
+++ b/assets/front/scss/components/_plugins.scss
@@ -160,3 +160,11 @@
     border-color: #fff !important;
   }
 }
+//when in #content reset fpc-containet padding and its row child margin for a better alignment
+#content[class*=col-] > .fpc-container {
+  padding: 0;
+  margin: 0 -15px;
+  > row {
+    margin: 0;
+  }
+}
